add components and pages

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <style>
       * {
         font-family: "Nunito Sans", sans-serif;
+        margin: 0;
       }
     </style>
     <title>Admin | Dashboard</title>
